[gd_scene load_steps=4 format=3 uid="uid://divq1aw52avpc"]

[ext_resource type="Texture2D" uid="uid://bw3amxscqygqq" path="res://assets/naveena/background_scaled.png" id="1_13sth"]
[ext_resource type="Script" uid="uid://c1gdpvs1wncp" path="res://Scripts/ui/hud.gd" id="1_kpdpg"]
[ext_resource type="FontFile" uid="uid://cfrp63w0hyxlv" path="res://assets/MathewCarter/Charter Regular.ttf" id="2_wecwr"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_kpdpg")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
texture = ExtResource("1_13sth")
stretch_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeElapsed" type="Label" parent="TextureRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_wecwr")
theme_override_font_sizes/font_size = 40
text = "Time elapsed: 0 s"
vertical_alignment = 1

[node name="Level" type="Label" parent="TextureRect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_wecwr")
theme_override_font_sizes/font_size = 40
text = "Level X"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HudUpdateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="HintBackground" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = 977.0
offset_top = 517.0
offset_right = 1274.0
offset_bottom = 716.0
color = Color(0, 0, 0, 0.537255)

[node name="HintDisappearTimer" type="Timer" parent="HintBackground"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="HintText" type="Label" parent="HintBackground"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 39.0
offset_top = 31.0
offset_right = 289.0
offset_bottom = 175.0
size_flags_horizontal = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_wecwr")
theme_override_font_sizes/font_size = 20
text = "Hint: "
autowrap_mode = 3

[connection signal="timeout" from="HudUpdateTimer" to="." method="_on_hud_update_timer_timeout"]
[connection signal="timeout" from="HintBackground/HintDisappearTimer" to="." method="_on_hint_disappear_timer_timeout"]
